# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  gendiff  gendiff_first_video  pyproject.toml  step7  step8
.github/workflows/: hexlet-check.yml  python-app.yml
gendiff/: __init__.py  convert.py  encode.py  engine.py  find_diff.py  gendiff.py  generate_diff.py  loader.py  parser.py
gendiff/formatters/: forms.py  json.py  outputs.py  plain.py  stylish.py
gendiff/gendiff/: generate_diff.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  gendiff_tes.py  split_answer 3.txt  split_answer.txt  test_diff.py  test_gendiff.py  testic.py
tests/fixtures/: complex_1 .yml  complex_1.json  complex_1.yaml  complex_2.json  complex_2.yml  complex_stylish.txt  json.json  split.json  split_answer.json  test_00.json  test_01.json  test_plain.txt
