[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["Leto_Rus"]
packages = [
  { include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.10.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.1.0"


[tool.poetry.scripts]
gendiff = "gendiff.engine:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
